<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AgregarMensajeActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tituloAddMensaje" />

    <EditText
        android:id="@+id/editTextmensaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/botonAddMsg"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/nuevomsg"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/botonAddMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextmensaje"
        android:layout_marginRight="20dp"
        android:layout_marginTop="37dp"
        android:text="@string/botonAddMensaje" />

</RelativeLayout>